<resources>
    <string name="app_name">Kardoc</string>

    <!-- Sign Activity -->
    <string name="signinText"><u>Sign In</u></string>
    <string name="signin">Sign In</string>
    <string name="signupText"><u>Sign Up</u></string>
    <string name="signup">Sign Up</string>
    <string name="forgetpassword">Forget"\n"Password</string>
    <string name="newCenter"><u>Create new Partnership</u></string>
    <string name="familyname">Family Name</string>
    <string name="lastname">홍</string>
    <string name="givenname">Given Name</string>
    <string name="firstname">길동</string>
    <string name="phone">Phone Number</string>
    <string name="examplephone">except \'-\'(hyphen)</string>
    <string name="gender">Gender</string>
    <string name="male">남성</string>
    <string name="female">여성</string>
    <string name="birth">Birth Day</string>
    <string name="year">YYYY</string>
    <string name="month">MM</string>
    <string name="day">DD</string>
    <string name="alertBirth">Check your Birthday again</string>
    <string name="id">Id</string>
    <string name="pw">Password</string>
    <string name="pwcheck">Password Check</string>
    <string name="alertId">Check your Id again</string>
    <string name="alertPw">Check your Password again</string>
    <string name="alertPwCheck">Password are not same</string>
    <string name="exampleId">example@test.com</string>
    <string name="examplePw">**********</string>
    <string name="exampleNewPw">6 – 16 words</string>
    <string name="cancle">Cancle</string>
    <string name="acceptprivatetext">\nPersonal Information Collection Agreement</string>
    <string name="acceptprivate">Accept using personal information</string>

    <!-- Lobby Activity-->
    <string name="title_activity_lobby">LobbyActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="information1">어떤 서비스가 필요 하신가요?</string>
    <string name="information2">실시간으로 수리비를 알아보고,\n차량 리뉴얼, 경정비 서비스를 신청할 수 있습니다.</string>
    <string name="requestSevice">서비스 신청하기 (견적신청서)</string>

    <!--Facebook Login-->
    <string name="facebook_app_id">268254320295870</string>

    <!-- WriteEstimation Activity -->
    <string name="write_estimation">견적 요청서 작성</string>

    <!-- Navigation drawer -->
    <string name="createShop">공업사 입점 신청</string>

    <!-- Signup Repair Shop -->
    <string name="signupShop"><u>Sign up for New repair shop</u></string>
    <string name="shopname">공업사 이름</string>
    <string name="shopnameHint">ex) 대한카센터</string>
    <string name="shopnumber">공업사 연락처</string>
    <string name="shopnumberHint">ex) 025555555</string>
</resources>
