<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jspark.android.kardoc.SignActivity">

    <com.facebook.login.widget.LoginButton
        android:id="@+id/signinFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="64dp"
        android:padding="0dp"
        android:layout_alignRight="@+id/signinGG"
        android:layout_alignEnd="@+id/signinGG"
        android:layout_alignLeft="@+id/signinGG"
        android:layout_alignStart="@+id/signinGG" />

    <ImageButton
        android:id="@+id/signinGG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/signingg"
        android:padding="0dp"
        android:layout_below="@+id/signinFacebook"
        android:layout_centerHorizontal="true" />
    <TextView
        android:id="@+id/textSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/signinGG"
        android:layout_centerVertical="true"
        android:text="@string/signinText"
        android:textSize="25sp"
        android:layout_marginBottom="15dp"/>
    <TextView
        android:id="@+id/textId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textSignin"
        android:layout_alignLeft="@id/textSignin"
        android:text="@string/id"/>
    <EditText
        android:id="@+id/editId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textId"
        android:layout_alignLeft="@id/signinFacebook"
        android:layout_alignRight="@id/signinFacebook"
        android:hint="@string/exampleId"/>
    <TextView
        android:id="@+id/errorId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editId"
        android:layout_alignLeft="@id/editId"
        android:text="@string/alertId"
        android:textColor="#FFFF0000"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/textPw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/errorId"
        android:layout_alignLeft="@id/textSignin"
        android:text="@string/pw"/>
    <EditText
        android:id="@+id/editPw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textPw"
        android:layout_alignLeft="@id/signinFacebook"
        android:layout_alignRight="@id/signinFacebook"
        android:hint="@string/examplePw"/>
    <TextView
        android:id="@+id/errorPw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editPw"
        android:layout_alignLeft="@id/editId"
        android:text="@string/alertPw"
        android:textColor="#FFFF0000"
        android:visibility="gone"/>
    <Button
        android:id="@+id/btnSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/errorPw"
        android:layout_marginLeft="16dp"
        android:text="@string/signup"/>
    <Button
        android:id="@+id/btnSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/errorPw"
        android:layout_centerHorizontal="true"
        android:text="@string/signin"/>
    <Button
        android:id="@+id/btnForgetPw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/errorPw"
        android:layout_marginRight="16dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/forgetpassword"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/signinRepairShop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:text="@string/newCenter"
        android:textColor="#FF0000FF" />
</RelativeLayout>
